Add s3 persistence for user data

--- a/Basic Classifier.ipynb
+++ b/Basic Classifier.ipynb
@@ -645,7 +645,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "max_words = 10000\n",
@@ -2485,34 +2487,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pickle.dump(vectorizer, open(\"input_data/tfidf.pickle\", \"wb\"))\n",
-    "pickle.dump(channel_encoder, open(\"input_data/channel_enc.pickle\", \"wb\"))\n",
-    "pickle.dump(user_encoder, open(\"input_data/user_enc.pickle\", \"wb\"))\n",
-    "pickle.dump(y_cols, open(\"input_data/y_cols.pickle\", \"wb\"))\n",
-    "model.save('my_model.h5')"
+    "vec_file = \"input_data/tfidf.pickle\"\n",
+    "channel_file = \"input_data/channel_enc.pickle\"\n",
+    "user_file = \"input_data/user_enc.pickle\"\n",
+    "y_file = \"input_data/y_cols.pickle\"\n",
+    "model_file = \"my_model.h5\"\n",
+    "user_list_file = 'input_data/users.pkl'\n",
+    "channel_list_file = 'input_data/channel_info.pkl'\n",
+    "\n",
+    "file_store = [\n",
+    "    vec_file, channel_file, user_file, y_file, model_file, \n",
+    "    user_list_file, channel_list_file\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from os import getenv\n",
+    "import boto3\n",
+    "\n",
+    "aws_id = getenv('DAN_BOT_AWS_ID')\n",
+    "aws_key = getenv('DAN_BOT_AWS_KEY')\n",
+    "aws_bucket = getenv('DAN_BOT_BUCKET')\n",
+    "\n",
+    "s3 = boto3.client('s3', aws_access_key_id=aws_id, aws_secret_access_key=aws_key)\n",
+    "\n",
+    "persist_data = False\n",
+    "if persist_data:\n",
+    "    pickle.dump(vectorizer, open(vec_file, \"wb\"))\n",
+    "    pickle.dump(channel_encoder, open(channel_file, \"wb\"))\n",
+    "    pickle.dump(user_encoder, open(user_file, \"wb\"))\n",
+    "    pickle.dump(y_cols, open(y_file, \"wb\"))\n",
+    "    model.save(model_file)\n",
+    "\n",
+    "    for file in file_store:\n",
+    "        s3.upload_file(file, aws_bucket, file)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
